--- a/Exemplo2/Exemplo2/MainPage.xaml
+++ b/Exemplo2/Exemplo2/MainPage.xaml
@@ -2,10 +2,23 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Exemplo2"
-             x:Class="Exemplo2.MainPage">
+             x:Class="Exemplo2.MainPage"
+             Title="Lista de Contatos">
 
-	<Label Text="Welcome to Xamarin.Forms!" 
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
+    <StackLayout Orientation="Vertical">
+        <ListView x:Name="listView" Margin="20" ItemSelected="OnListItemSelected">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <StackLayout Margin="20,0,0,0" Orientation="Vertical" HorizontalOptions="FillAndExpand">
+                            <Label Text="{Binding Nome}" VerticalTextAlignment="Center" HorizontalOptions="StartAndExpand" />
+                            <Label Text="{Binding Telefone}" VerticalTextAlignment="Center" FontSize="10" HorizontalOptions="StartAndExpand" />
+                        </StackLayout>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <Button Text="Adicionar" Clicked="button_Clicked"/>
+    </StackLayout>
 
 </ContentPage>
